--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         </form>
 
         <div id="loading" style="display: none;">Loading...</div>
-        <div id="success-message" style="display: none; color: green;">Form submitted successfully!</div>
+        <div id="success-message" style="display: none; color: green;">Successfully Submitted!</div>
     </div>
 
     <script>
